# Classic-Tower-Defence

./: .gitignore  CMakeLists.txt
Classic Tower Defence/: AppDelegate.swift  main.cpp
Classic Tower Defence.xcodeproj/: project.pbxproj
Classic Tower Defence.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Classic Tower Defence.xcodeproj/xcuserdata/indikernick.xcuserdatad/xcschemes/: Classic Tower Defence.xcscheme  xcschememanagement.plist
Classic Tower Defence/Base.lproj/: MainMenu.xib
Classic Tower Defence/Game/: afford tower.cpp  afford tower.hpp  aim tower component.hpp  app.cpp  app.hpp  aura damage system.cpp  aura damage system.hpp  aura tower component.hpp  base damage system.cpp  base damage system.hpp  base gold tag.hpp  base health component.hpp  base health tag.hpp  basic components.hpp  beam firing anim system.cpp  beam firing anim system.hpp  beam tower component.hpp  common tower stats component.hpp  component list.hpp  count live units.cpp  count live units.hpp  create base.cpp  create base.hpp  create level.cpp  create level.hpp  create map.cpp  create map.hpp  create spawner.cpp  create spawner.hpp  create tower system.cpp  create tower system.hpp  create tower.cpp  create tower.hpp  cursor area.cpp  cursor area.hpp  cursor systems.cpp  cursor systems.hpp  depth.hpp  firing anim system.cpp  firing anim system.hpp  (+183 more)
Classic Tower Defence/Resources/Animations/: armour.anim  big robot.anim  blaster.anim  cannon.anim  explosion.anim  explosive cannon.anim  fire aura base.anim  fire aura.anim  fire.anim  fireball.anim  flamethrower.anim  health.anim  ice aura base.anim  ice aura.anim  iceball.anim  laser.anim  map.anim  placeholder map.anim  plasma.anim  poison cannon.anim  robot.anim  snowball.anim  tank.anim  ui plan.anim
Classic Tower Defence/Resources/Fonts/: 5x8 ascii.atlas
Classic Tower Defence/Resources/Levels/: base wave.libsonnet  get sound.libsonnet  getsound.libsonnet  getsprite.libsonnet  level 0.jsonnet  level 1.jsonnet  level 2.jsonnet  level 3.jsonnet  sounds.jsonnet  towers.jsonnet
Classic Tower Defence/Resources/Maps/: map 0.txt  map 1.txt  map 2.txt  map 3.txt  map 4.txt  map 5.txt
Classic Tower Defence/Resources/Sounds/: sounds.json  sounds.jsonnet
Classic Tower Defence/Resources/Spritesheets/: sprites.atlas  ui.atlas
Classic Tower Defence/Resources/Waves/: waves 0.json
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  index.html  index.js  index.wasm
Web_Build/: CMakeCache.txt  Makefile  cmake_install.cmake  index.data  index.html  index.js  index.wasm
Webpage/: index.html
Windows_Build/: CMakeCache.txt  Makefile  cmake_install.cmake  generate radius.js  level 0.json  level 1.json  radius.atlas  sprites.atlas  towers.json  ui.atlas
